--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 .DS_Store
+*.swp
+*~.nib
+
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+
+*.xcworkspace/*
+!*.xcworkspace/contents.xcworkspacedata
+
+*.mode1v3
+*.mode2v3
+
+build/
+release/
