--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,40 @@
-.DS_Store
-*.swp
-*~.nib
+# Xcode
+
+build/
+release/
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
 
 *.xcodeproj/*
+
+
+# CocoaPod
 !*.xcodeproj/project.pbxproj
 
 *.xcworkspace/*
 !*.xcworkspace/contents.xcworkspacedata
 
-*.mode1v3
-*.mode2v3
+Pods/*
+Podfile.lock
 
-build/
-release/
+
+# others
+.DS_Store
+*.swp
+*~.nib
+
+
+
+
